Ms | updates public index.html file

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -5,5 +5,7 @@
 </head>
 <body>
 	<h2>Reactive Chat App Service Listening on http://localhost:8080</h2>
+
+	<h2>Reactive Chat App UI Listening on <a href="http://localhost:3000">http://localhost:3000</a></h2>
 </body>
 </html>
